--- a/javatutorial/3/index.html
+++ b/javatutorial/3/index.html
@@ -479,6 +479,8 @@
         System.out.println(10 > 5 ? "major" : "menor");
         System.out.println(num % 2 == 0 ? "parell" : "imparell");
     </code>
+
+    (in progress...)
 </section>
 
 <section>
