--- a/javatutorial/3/index.html
+++ b/javatutorial/3/index.html
@@ -248,7 +248,7 @@
         int a = 10 + 10;
         int b = a + 10;
 
-        System.out.println(a + b + 5);  // 55   (20 + 30 + 10)
+        System.out.println(a + b + 5);  // 55   (20 + 30 + 5)
     </code>
 
     <code java>
@@ -744,7 +744,19 @@
         </question>
     </quizz>
 
+    <challenge>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+
+
+    </challenge>
 </section>
+
+
+
+
+
 
 <section>
     <h2>Operador ternari</h2>
@@ -777,7 +789,9 @@
     <challenge>
         <p>
             <a href="https://www.hackerrank.com/contests/dam-m3/challenges/els-petits-davant">Els petits davant</a>
+            <br>
             <a href="https://www.hackerrank.com/contests/dam-m3/challenges/contractar-un-programador">Contractar un programador</a>
+            <br>
             <a href="https://www.hackerrank.com/contests/dam-m3/challenges/c1-l2-4-aprovar-el-modul">Aprovar el mòdul</a>
         </p>
     </challenge>
