--- a/javatutorial/3/index.html
+++ b/javatutorial/3/index.html
@@ -391,6 +391,7 @@
             <br><a href="https://www.hackerrank.com/contests/dam-m3/challenges/c1-l1-11-perimetre-dun-rectangle">Perímetre d'un rectangle</a>
             <br><a href="https://www.hackerrank.com/contests/dam-m3/challenges/c1-l1-12-artropodes">Artròpodes</a>
             <br><a href="https://www.hackerrank.com/contests/dam-m3/challenges/stigid-sert/problem">stigíD serT</a>
+            <br><a href="https://www.hackerrank.com/contests/dam-m3/challenges/c1-l1-10-comptant-els-minuts-per-cap-dany/submissions/code/1326996619">Comptant els minuts per cap d'any</a>
         </p>
     </challenge>
 </section>
