--- a/webapps/index.html
+++ b/webapps/index.html
@@ -8,9 +8,12 @@
 <header>
     <h1>WebApps</h1>
 
-    <resum>En aquesta pràctica ens iniciarem amb les tecnologies que s'utilitzen per al desenvolupament
-        d'aplicacions web.</resum>
-
+    <abstract>
+        <p>
+            En aquesta pràctica ens iniciarem amb les tecnologies que s'utilitzen per al desenvolupament
+            d'aplicacions web.
+        </p>
+    </abstract>
 </header>
 
 <section>
@@ -88,7 +91,7 @@
         Li hem de enviar les dades adequades, seguint el protocol HTTP.
     </p>
     <p>Prova a escriure alguna cosa, i polsa <kbd>Intro</kbd> per a enviar les dades al servidor.</p>
-    <p>El servidor respondrà amb un error <incode>400 (Bad request)</incode>. La petició no ha estat correcta.</p>
+    <p>El servidor respondrà amb un error <tech>400 (Bad request)</tech>. La petició no ha estat correcta.</p>
 
     <img src="img/bad_request.png">
 
@@ -166,6 +169,17 @@
     <p>Alguns servidors requereixen d'autenticació amb usuari:contrasenya per a accedir 
         a certs recursos</p>
     </p>
+
+    <h4>Host</h4>
+    <p>El host és l'adreça IP o nom DNS del servidor.</p>
+
+    <h4>Port</h4>
+
+    <h4>Path</h4>
+
+    <h4>Query</h4>
+
+    <h4>Fragment</h4>
 </section>
 
 <section>
