--- a/setupwebserver/index.html
+++ b/setupwebserver/index.html
@@ -7,6 +7,12 @@
 <section>
     <h1>Preparar el servidor web</h1>
 
+        <p>Pots fer servir aquest <a href="https://github.com/smxm8/setup_container">
+            script per a posar a punt el servidor</a></p>
+
+        <hr>
+        <p>En canvi, si prefereixes fer-ho pas a pas, segueix-los a continuació:</p>
+
         <p>Crea un contenidor anomenat <name><nom-contenidor>contenidor</nom-contenidor></name>:</p>
         <terminal>
             <host>@host</host>
