--- a/javatutorial/3/index.html
+++ b/javatutorial/3/index.html
@@ -838,8 +838,9 @@
     </quizz>
 
     <challenge>
+
         <p>
-            <a href=""></a>
+            <a href="https://www.hackerrank.com/contests/dam-m3/challenges/hora-dapertura-operadors-ternari">Hora d'apertura</a>
             <br>
             <a href=""></a>
             <br>
