--- a/javatutorial/3/index.html
+++ b/javatutorial/3/index.html
@@ -478,7 +478,7 @@
         System.out.println(false || !false); // true
         System.out.println(true && false || true); // true
         System.out.println(true || true && false); // true
-        System.out.println((true || true) && false); // true
+        System.out.println((true || true) && false); // false
         System.out.println(!(true || false)); // false
     </code>
 
