--- a/javatutorial/3/index.html
+++ b/javatutorial/3/index.html
@@ -201,6 +201,7 @@
         System.out.println("Java" + 14 + 1);    // Java141
         System.out.println("Java" + (14 + 1));  // Java15    (primer es fan els parentesi)
         System.out.println("Java" + 8 * 2);     // Java16    (primer es fa la multiplicacio)
+        System.out.println("Java" + 8  + " TM");    // Java8 TM    (primer es fa la multiplicacio)
 
         System.out.println("Java" - 8);         // Error! només es pot usar l'operador + 
         System.out.println("Java" + 8 - 1);     // Error! No és vàlid ja que "Java"+8 és "Java8", 
